--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -12,15 +12,16 @@
 !*          Switches         *
 !*****************************
 
-is_structure_evolution =  0 ! If 1, physical structure properties evolve with time, values come from structure_evolution.dat file that must exists
+preliminary_test = 1 ! Will or will not do comprehensive tests before the simulation. Switch it off when lauching thousands or simulations
+is_structure_evolution = 0 ! If 1, physical structure properties evolve with time, values come from structure_evolution.dat file that must exists
 grain_temperature_type = computed ! fixed, gas, table or computed
 ! fixed: Tgrain = Tgrain_initial. ;
 ! gas: Tgrain=Tgas ; 
 ! table: Tgrain is interpolated from structure_evolution.dat data file (5th optional column) ; 
 ! computed: calculated from uv_flux and visual extinction by radiative equilibrium
-is_grain_reactions =  1 ! Accretion, grain surface reactions
-is_absorption =  1 ! H2 AND CO SELF-SHIELDING
-grain_tunneling_diffusion =  0 ! 0=thermal; For H,H2: 1=QM1; 2=QM2; 3=choose fastest
+is_grain_reactions = 1 ! Accretion, grain surface reactions
+is_absorption = 1 ! H2 AND CO SELF-SHIELDING
+grain_tunneling_diffusion = 0 ! 0=thermal; For H,H2: 1=QM1; 2=QM2; 3=choose fastest
 modify_rate_flag =  1 ! 1=modify H; 2=modify H,H2, 3=modify all, -1=H+H only
 conservation_type =  0 ! 0=only e- conserved; 1=elem #1 conserved, 2=elem #1 & #2, etc
 
