--- a/example_simulation/gas_reactions.in
+++ b/example_simulation/gas_reactions.in
@@ -1,4 +1,4 @@
-!    Reactants                    ->     Products                                            TODO
+!    Reactants                    ->     Products                                                A          B          C      xxxxxxxxxxxxxxxxxxxxx ITYPE Tmin   Tmax formula ID xxxxx
 H          CR                     -> H+         e-                                            4.600e-01  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  1  -9999   9999  1     1 1  1
 He         CR                     -> He+        e-                                            5.000e-01  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  1  -9999   9999  1     2 1  1
 N          CR                     -> N+         e-                                            2.100e+00  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  1  -9999   9999  1     3 1  1
