--- a/example_simulation/grain_reactions.in
+++ b/example_simulation/grain_reactions.in
@@ -1,4 +1,4 @@
-!    Reactants                    ->     Products                                            TODO
+!    Reactants                    ->     Products                                                A          B          C      xxxxxxxxxxxxxxxxxxxxx ITYPE Tmin   Tmax formula ID xxxxx
 HC2O       CRP                    -> CO         CH                                            1.500E+03  0.000E+00  0.000E+00 0.00e+00 0.00e+00   NA  2  -9999   9999  2  6090 1  1
 O3         CRP                    -> O2         O                                             1.500e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA  2  -9999   9999  2  6091 1  1
 FeH        CRP                    -> Fe         H                                             1.000e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA  2  -9999   9999  2  6092 1  1
