--- a/example_simulation/grain_reactions.in
+++ b/example_simulation/grain_reactions.in
@@ -2268,3 +2268,5 @@ JC9H4                             -> C9H4                                       
 JC2H6                             -> C2H6                                                     1.000E-03  0.000E+00  0.000E+00 0.00e+00 0.00e+00   NA 67  -9999   9999  0  8356 1  1
 JH2O                              -> OH         H                                             1.000E-03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 67  -9999   9999  0  8357 1  1
 JCO2                              -> CO         O                                             1.000E-03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 67  -9999   9999  0  8358 1  1
+JH         JCl                    -> JHCl                                                     1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  8359 1  1
+JH         JCl                    -> HCl                                                      1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  8360 1  1
